--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,20 @@
 <html ⚡ lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport"
+    content="width=device-width,minimum-scale=1,initial-scale=1">
+    <title>Chico's Cheese Bicycles</title>
+
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+    <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
+    <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
-    <title>Chico's Cheese Bicycles</title>
     <link
       rel="shortcut icon"
       href="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheese-favicon.png?1540228964214"
     />
-    <meta name="viewport"
-    content="width=device-width,minimum-scale=1,initial-scale=1">
+
     <link rel="canonical" href="https://hungry-modem.glitch.me/">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
@@ -28,6 +32,15 @@
 
         <amp-youtube data-videoid="BlpMQ7fMCzA" layout="responsive" width="480" height="270"></amp-youtube>
 
+        <amp-carousel layout="responsive" width="412" height="309" type="slides" loop>
+          <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheddar-chaser.jpg?1540228205366"
+                   width="412" height="309" layout="responsive"></amp-img>
+          <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheese.jpg?1540228223785"
+                   width="412" height="309" layout="responsive"></amp-img>
+          <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fmouse.jpg?1540228223963"
+                   width="412" height="309" layout="responsive"></amp-img>
+      </amp-carousel>
+
         <div class="below-hero">
           <h2 class="main-heading">What we're about</h2>
           <p class="main-text">
@@ -37,6 +50,14 @@
             rodent-repelling varnish they last longer than ever!
           </p>
         </div>
+
+        <div class="social-bar">
+          <amp-social-share type="email" width="44" height="44"></amp-social-share>
+          <amp-social-share type="linkedin" width="44" height="44"></amp-social-share>
+          <amp-social-share type="tumblr" width="44" height="44"></amp-social-share>
+          <amp-social-share type="twitter" width="44" height="44"></amp-social-share>
+        </div>
+
       </div>
     </main>
   </body>
