--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,21 @@
     <link rel="canonical" href="https://hungry-modem.glitch.me/">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
-      
+      body {
+        font-family: sans-serif;
+        line-height: 1.5rem;
+        min-width: 20rem;
+      }
+      main {
+        margin: 0 auto;
+        max-width: 50rem;
+      }
+      .main-content {
+        margin: 0 1rem;
+      }
+      .below-hero {
+        margin: 1.5rem;
+      }
     </style>
     
   </head>
@@ -55,10 +69,13 @@
         </div>
 
         <amp-script layout="container"
-        src="https://amp.dev/documentation/examples/components/amp-script/hello-world.js"
-        class="amp-script-sample">
-        <button id="hello">Click!</button>
-      </amp-script>        
+        src="https://amp.dev/documentation/examples/components/amp-script/hello-world.js">
+        <button id="hello">Click me!</button>
+      </amp-script>  
+      <amp-script layout="container"
+      src="https://amp.dev/documentation/examples/components/amp-script/hello-world.js">
+      <button id="hello2">Yet another Click me!</button>
+    </amp-script>      
 
         <div class="social-bar">
           <amp-social-share type="email" width="44" height="44"></amp-social-share>
