--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>Chico's Cheese Bicycles</title>
+  <title>Ăn khế trả vàng</title>
 
   <meta name="amp-script-src" content="sha384-JJ8hybcP8hhYy9N0ruZaJF5DqeLX5R5Aa1Kd4OPrB26C_2Gy33RFc4Z_IBQel0MA">
 
@@ -19,11 +19,12 @@
     src="https://cdn.ampproject.org/v0/amp-lightbox-gallery-0.1.js"></script>
     <script async custom-element="amp-image-lightbox" src="https://cdn.ampproject.org/v0/amp-image-lightbox-0.1.js"></script>
 
+
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
-
+  <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
   <link rel="shortcut icon"
     href="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheese-favicon.png?1540228964214" />
 
@@ -404,8 +405,16 @@
           hungry. Our bikes are 100% biodegradable. And with our new
           rodent-repelling varnish they last longer than ever!
         </p>
-        <amp-carousel layout="responsive" width="412" height="309" type="slides" loop id="carousel" lightbox
-          on="slideChange:ampSelector.toggle(index=event.index)">
+
+        <amp-state id="carousel">
+          <script type="application/json">
+            {
+              "selectedSlide": 0
+            }
+          </script>
+        </amp-state>
+        <amp-carousel on="slideChange:AMP.setState({carousel: {selectedSlide:event.index}})" layout="responsive" width="412" height="309" type="slides" loop id="carousel" lightbox
+          [slide]="carousel.selectedSlide">
           <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheddar-chaser.jpg?1540228205366"
             width="412" height="309" layout="responsive"></amp-img>
           <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheese.jpg?1540228223785"
@@ -413,23 +422,27 @@
           <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fmouse.jpg?1540228223963"
             width="412" height="309" layout="responsive"></amp-img>
         </amp-carousel>
-        <amp-selector id="ampSelector" name="single_image_select" layout="container">
+        <amp-selector id="ampSelector" [selected]="carousel.selectedSlide" layout="container"
+        on="select:AMP.setState({carousel: {selectedSlide:event.targetOption}})">
           <amp-carousel class="thumbnail-carousel" layout="fixed-height" type="carousel" width="auto" height="78">
             <amp-img
               src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheddar-chaser-thumb.jpg?1540228205366"
-              on="tap:carousel.goToSlide(index=0)" width="96" height="72" layout="fixed" role="button" tabindex="0"
+              width="96" height="72" layout="fixed" role="button" tabindex="0"
               option="0">
             </amp-img>
             <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fcheese-thumb.jpg?1540228223785"
-              on="tap:carousel.goToSlide(index=1)" width="96" height="72" layout="fixed" role="button" tabindex="1"
+              width="96" height="72" layout="fixed" role="button" tabindex="1"
               option="1">
             </amp-img>
             <amp-img src="https://cdn.glitch.com/d7f46a57-0ca4-4cca-ab0f-69068dec6631%2Fmouse-thumb.jpg?1540228223963"
-              on="tap:carousel.goToSlide(index=2)" width="96" height="72" layout="fixed" role="button" tabindex="2"
+              width="96" height="72" layout="fixed" role="button" tabindex="2"
               option="2">
             </amp-img>
           </amp-carousel>
         </amp-selector>
+        <p [text]="'Slide ' + (carousel.selectedSlide + 1) + ' of 3'">
+          Slide 1 of 3
+        </p>
 
       </div>
 
@@ -490,6 +503,12 @@
       <amp-script layout="container" src="https://amp.dev/documentation/examples/components/amp-script/hello-world.js">
         <button class="btn" id="hello2">Inline JS!</button>
       </amp-script>
+
+      <h2>Set State and Binding</h2>
+      <button on="tap:AMP.setState({message: 'Hello setState and Binding'})" class="btn">
+        setState!
+      </button>
+      <p [text]="message">___</p>
 
       <div class="social-bar">
         <amp-social-share type="email" width="44" height="44"></amp-social-share>
