Complete intermediate courre

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>Ăn khế trả vàng</title>
+  <title>LTHW - AMP</title>
 
   <meta name="amp-script-src" content="sha384-JJ8hybcP8hhYy9N0ruZaJF5DqeLX5R5Aa1Kd4OPrB26C_2Gy33RFc4Z_IBQel0MA">
 
