complete TOC link

--- a/src/xiaoaojianghu.html
+++ b/src/xiaoaojianghu.html
@@ -10,8 +10,6 @@
     <!-- Import other AMP Extensions here -->
     <script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
     <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
-
-
     <style amp-custom>
     /* Add your styles here */
     .wrapper {margin: 1rem;}
@@ -23,9 +21,7 @@
       --color-primary: #005AF0;
       --color-secondary: #00DCC0;
       --color-text-light: #fff;
-
       --space-2: 1rem;   /* 16px */
-
       --box-shadow-1: 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 1px -1px rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     }
     .scrollToTop {
@@ -126,36 +122,36 @@
     <li><a href="#chapter8">八 面壁</a></li>
     <li><a href="#chapter9">九 邀客</a></li>
     <li><a href="#chapter10">十 传剑</a></li>
-    <li><a href="#chapter11">11</a></li>
-    <li><a href="#chapter12">12</a></li>
-    <li><a href="#chapter13">13</a></li>
-    <li><a href="#chapter14">14</a></li>
-    <li><a href="#chapter15">15</a></li>
-    <li><a href="#chapter16">16</a></li>
-    <li><a href="#chapter17">17</a></li>
-    <li><a href="#chapter18">18</a></li>
-    <li><a href="#chapter19">19</a></li>
-    <li><a href="#chapter20">20</a></li>
-    <li><a href="#chapter21">21</a></li>
-    <li><a href="#chapter22">22</a></li>
-    <li><a href="#chapter23">23</a></li>
-    <li><a href="#chapter24">24</a></li>
-    <li><a href="#chapter25">25</a></li>
-    <li><a href="#chapter26">26</a></li>
-    <li><a href="#chapter27">27</a></li>
-    <li><a href="#chapter28">28</a></li>
-    <li><a href="#chapter29">29</a></li>
-    <li><a href="#chapter30">30</a></li>
-    <li><a href="#chapter31">31</a></li>
-    <li><a href="#chapter32">32</a></li>
-    <li><a href="#chapter33">33</a></li>
-    <li><a href="#chapter34">34</a></li>
-    <li><a href="#chapter35">35</a></li>
-    <li><a href="#chapter36">36</a></li>
-    <li><a href="#chapter37">37</a></li>
-    <li><a href="#chapter38">38</a></li>
-    <li><a href="#chapter39">39</a></li>
-    <li><a href="#chapter40">40</a></li>
+    <li><a href="#chapter11">十一 聚气</a></li>
+    <li><a href="#chapter12">十二 围攻</a></li>
+    <li><a href="#chapter13">十三 学琴</a></li>
+    <li><a href="#chapter14">十四 论杯</a></li>
+    <li><a href="#chapter15">十五 灌药</a></li>
+    <li><a href="#chapter16">十六 注血</a></li>
+    <li><a href="#chapter17">十七 倾心</a></li>
+    <li><a href="#chapter18">十八 联手</a></li>
+    <li><a href="#chapter19">十九 打赌</a></li>
+    <li><a href="#chapter20">二十 入狱</a></li>
+    <li><a href="#chapter21">二十一 囚居</a></li>
+    <li><a href="#chapter22">二十二 脱困</a></li>
+    <li><a href="#chapter23">二十三 伏击</a></li>
+    <li><a href="#chapter24">二十四 蒙冤</a></li>
+    <li><a href="#chapter25">二十五 闻讯</a></li>
+    <li><a href="#chapter26">二十六 围寺</a></li>
+    <li><a href="#chapter27">二十七 三战</a></li>
+    <li><a href="#chapter28">二十八 积雪</a></li>
+    <li><a href="#chapter29">二十九 掌门</a></li>
+    <li><a href="#chapter30">三十 密议</a></li>
+    <li><a href="#chapter31">三十一 绣花</a></li>
+    <li><a href="#chapter32">三十二 并派</a></li>
+    <li><a href="#chapter33">三十三 比剑</a></li>
+    <li><a href="#chapter34">三十四 夺帅</a></li>
+    <li><a href="#chapter35">三十五 复仇</a></li>
+    <li><a href="#chapter36">三十六 伤逝</a></li>
+    <li><a href="#chapter37">三十七 迫娶</a></li>
+    <li><a href="#chapter38">三十八 聚歼</a></li>
+    <li><a href="#chapter39">三十九 拒盟</a></li>
+    <li><a href="#chapter40">四十 曲谐</a></li>
     <li><a href="#final">后记</a></li>
 </ul>
 </section>
