--- a/src/dict.html
+++ b/src/dict.html
@@ -46,6 +46,18 @@
         <li>无益: vô ích</li>
         <li>一人抚琴: nhất nhân phủ cầm</li>
         <li>一人吹箫: nhất nhân xúy tiêu</li>
+        <li>琴箫合奏: cầm tiêu hợp tấu</li>
+        <li>分别: phân biệt</li>
+        <li>心意相通: tâm ý tương thông</li>
+        <li>位朋友: vị bằng hữu</li>
+        <li>晚辈自伤身世: vãn bối tự thương thân thể</li>
+        <li>后世: hậu thế</li>
+        <li>同时: đồng thời</li>
+        <li>传人: truyền nhân</li>
+        <li>琴箫妙技: cầm tiêu diệu kỹ</li>
+        <li>真主: chân chủ</li>
+        <li>原因: nguyên nhân</li>
+        <li>武林同道: võ lâm đồng đạo</li>
         <li></li>
     </ul>
 </body>
